Add dependency againt stdio
Just use "npm install" to install needed node modules

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 "dependencies" :
   { "node-static" : "*",
     "tail" : "*",
-    "socket.io" : "*"
+    "socket.io" : "*",
+    "stdio" : "*"
   }
 }
